--- a/frontend/static/pages/forgot_password.html
+++ b/frontend/static/pages/forgot_password.html
@@ -14,44 +14,48 @@
   <script src="/static/js/app.js"></script>
 </head>
 <body class="auth-page">
-  <nav class="navbar navbar-dark glass-nav">
-    <div class="container d-flex align-items-center">
-      <div class="d-flex align-items-center gap-3">
-        <a class="navbar-brand fw-bold fs-4 mb-0 me-0" href="/">
-          <span class="text-primary">I</span>CP
-        </a>
-        <a class="btn btn-outline-light btn-sm px-3" href="/static/pages/login.html">Login</a>
+  <div id="app" v-cloak>
+    <nav class="navbar navbar-dark glass-nav">
+      <div class="container d-flex align-items-center">
+        <div class="d-flex align-items-center gap-3">
+          <a class="navbar-brand fw-bold fs-4 mb-0 me-0" href="/">
+            <span class="text-primary">I</span>CP
+          </a>
+          <a class="btn btn-outline-light btn-sm px-3" href="/static/pages/login.html">Login</a>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <div id="app" class="container py-5" v-cloak>
-    <div class="row justify-content-center">
-      <div class="col-md-5">
-        <div class="auth-card p-4 p-md-5 animate-fade-in">
-          <h2 class="auth-header mb-3">Forgot Password</h2>
-          <p class="text-secondary mb-4">Enter your email address and we'll send you a link to reset your password.</p>
-          
-          <form @submit.prevent="submit">
-            <div class="mb-4">
-              <label class="form-label text-secondary small text-uppercase fw-bold">Email Address</label>
-              <input name="email" type="email" class="form-control form-control-lg" required placeholder="name@example.com" maxlength="80" v-model="email">
-            </div>
-            <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold shadow-sm mb-3" :disabled="submitting">
-              <span v-if="submitting" class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>
-              <span v-else>Send Reset Link</span>
-            </button>
-            <div class="text-center">
-              <a href="/static/pages/login.html" class="text-secondary small text-decoration-none fw-bold">
-                <i class="bi bi-arrow-left me-1"></i>Back to Login
-              </a>
-            </div>
-          </form>
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-5">
+          <div class="auth-card p-4 p-md-5 animate-fade-in">
+            <h2 class="auth-header mb-3">Forgot Password</h2>
+            <p class="text-secondary mb-4">Enter your email address and we'll send you a link to reset your password.</p>
+            
+            <form @submit.prevent="submit">
+              <div class="mb-4">
+                <label class="form-label text-secondary small text-uppercase fw-bold">Email Address</label>
+                <input name="email" type="email" class="form-control form-control-lg" required placeholder="name@example.com" maxlength="80" v-model="email">
+              </div>
+              <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold shadow-sm mb-3" :disabled="submitting">
+                <span v-if="submitting" class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>
+                <span v-else>Send Reset Link</span>
+              </button>
+              <div class="text-center">
+                <a href="/static/pages/login.html" class="text-secondary small text-decoration-none fw-bold">
+                  <i class="bi bi-arrow-left me-1"></i>Back to Login
+                </a>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/js/app.js"></script>
   <script src="/static/js/forgot_password.js"></script>
 </body>
 </html>
