--- a/frontend/static/pages/reset_password.html
+++ b/frontend/static/pages/reset_password.html
@@ -38,16 +38,13 @@
         <div class="col-md-5">
           <div class="auth-card p-4 p-md-5 animate-fade-in text-center" v-if="success">
             <div class="mb-4">
-              <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem;"></i>
+              <i class="bi bi-check-circle-fill text-success auth-success-icon"></i>
             </div>
             <h2 class="auth-header mb-3">Password Reset!</h2>
             <p class="text-secondary mb-4">
               Your password has been updated successfully. 
               Please log in again to access your account.
             </p>
-            <div class="p-3 bg-light bg-opacity-10 rounded-3 mb-4 border border-success border-opacity-25">
-              <span class="small text-success fw-bold">This page will close in {{ countdown }} seconds...</span>
-            </div>
             <a href="/static/pages/login.html" class="btn btn-primary btn-lg w-100 fw-bold shadow-sm">
               Login Now
             </a>
