--- a/frontend/static/pages/register.html
+++ b/frontend/static/pages/register.html
@@ -109,9 +109,30 @@
                   </span>
                 </div>
               </div>
-              <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold shadow-sm" :disabled="loading">
+
+              <!-- Agreement Checkbox -->
+              <div class="mb-4">
+                <div class="form-check text-start d-flex align-items-start gap-2">
+                  <input class="form-check-input mt-1 shadow-none" type="checkbox" v-model="form.agreed" id="agreeCheck" required>
+                  <label class="form-check-label small text-secondary cursor-pointer" for="agreeCheck">
+                    I agree to the Terms & Conditions and Privacy Policy.
+                  </label>
+                </div>
+              </div>
+
+              <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold shadow-sm" :disabled="loading || !form.agreed">
                 {{ loading ? 'Creating Account...' : 'Create Account' }}
               </button>
+
+              <!-- Legal Links -->
+              <div class="mt-4 text-center">
+                <p class="text-secondary small mb-0">
+                  By continuing, you agree to ICP's 
+                  <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showTerms">Terms & Conditions</a>,<br>
+                  Read our <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showPrivacy">Privacy Policy</a>.
+                </p>
+              </div>
+
               <div class="mt-4 text-center">
                 <span class="text-secondary small">Already have an account?</span>
                 <a href="/static/pages/login.html" class="auth-footer-link text-primary text-decoration-none fw-bold ms-1">Login</a>
