--- a/frontend/static/pages/cta.html
+++ b/frontend/static/pages/cta.html
@@ -6,13 +6,23 @@
   <title>Get Started</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link rel="stylesheet" href="/static/css/styles.css">
+  <style>
+    [v-cloak] { display: none !important; }
+  </style>
   <script src="/static/js/app.js"></script>
 </head>
 <body>
+  <!-- Global Loader -->
+  <div id="global-loader" class="page-loader">
+    <div class="loader-spinner"></div>
+    <div class="loader-text animate-pulse">Loading ICP...</div>
+  </div>
+
   <div id="app" v-cloak>
     <nav class="navbar navbar-dark glass-nav">
       <div class="container d-flex align-items-center">
@@ -37,8 +47,8 @@
 
     <div class="container py-5 mt-5">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-center animate-fade-in">
-          <div class="card p-5 shadow-lg border-0 glass-card-dark">
+        <div class="col-lg-10 text-center animate-fade-in">
+          <div class="card p-5 shadow-lg border-0 glass-card-dark overflow-hidden">
             <div class="mb-4">
               <div class="bg-primary bg-opacity-10 p-4 rounded-circle d-inline-block mb-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="text-primary" viewBox="0 0 16 16">
@@ -50,45 +60,90 @@
               <p class="lead text-secondary mb-5">Join thousands of candidates who have improved their interview performance with our AI-powered feedback system. Your professional journey starts here.</p>
             </div>
             
-            <div class="row g-4 justify-content-center">
+            <div class="row g-4 justify-content-center mb-5">
               <template v-if="!logged">
-                <div class="row g-4 justify-content-center">
-                  <div class="col-md-5">
-                    <a href="/static/pages/register.html" class="btn btn-primary btn-lg w-100 py-3 rounded-pill shadow">
-                      Create Account
-                    </a>
-                  </div>
-                  <div class="col-md-5">
-                    <a href="/static/pages/login.html" class="btn btn-outline-light btn-lg w-100 py-3 rounded-pill">
-                      Sign In
-                    </a>
-                  </div>
+                <div class="col-md-5">
+                  <a href="/static/pages/register.html" class="btn btn-primary btn-lg w-100 py-3 rounded-pill shadow fw-bold">
+                    Create Account
+                  </a>
+                </div>
+                <div class="col-md-5">
+                  <a href="/static/pages/login.html" class="btn btn-outline-light btn-lg w-100 py-3 rounded-pill">
+                    Sign In
+                  </a>
                 </div>
               </template>
               <template v-if="logged">
                 <div class="col-md-8">
-                  <a href="/static/pages/dashboard.html" class="btn btn-primary btn-lg w-100 py-3 rounded-pill shadow">
+                  <a href="/static/pages/dashboard.html" class="btn btn-primary btn-lg w-100 py-3 rounded-pill shadow fw-bold">
                     Continue to Dashboard
                   </a>
                 </div>
               </template>
             </div>
             
-            <div class="mt-5 pt-4 border-top border-secondary border-opacity-25">
-              <div class="row text-center g-3">
-                <div class="col-4">
-                  <h4 class="fw-bold mb-0">100%</h4>
-                  <p class="small text-secondary mb-0">AI Driven</p>
-                </div>
-                <div class="col-4">
-                  <h4 class="fw-bold mb-0">Real-time</h4>
-                  <p class="small text-secondary mb-0">Feedback</p>
-                </div>
-                <div class="col-4">
-                  <h4 class="fw-bold mb-0">Secure</h4>
-                  <p class="small text-secondary mb-0">Data</p>
+            <!-- Key Features Section -->
+            <div class="row g-4 text-start mb-5 px-lg-4">
+              <div class="col-md-4">
+                <div class="p-3 rounded bg-primary bg-opacity-10 h-100 border border-primary border-opacity-10">
+                  <h5 class="fw-bold text-primary"><i class="bi bi-robot me-2"></i>AI Coaching</h5>
+                  <p class="small text-secondary mb-0">Personalized mock interviews with role-specific questions and real-time guidance.</p>
                 </div>
               </div>
+              <div class="col-md-4">
+                <div class="p-3 rounded bg-primary bg-opacity-10 h-100 border border-primary border-opacity-10">
+                  <h5 class="fw-bold text-primary"><i class="bi bi-file-earmark-text me-2"></i>Resume Analysis</h5>
+                  <p class="small text-secondary mb-0">Get instant scores and detailed feedback on how well your resume matches target roles.</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="p-3 rounded bg-primary bg-opacity-10 h-100 border border-primary border-opacity-10">
+                  <h5 class="fw-bold text-primary"><i class="bi bi-graph-up-arrow me-2"></i>Readiness Score</h5>
+                  <p class="small text-secondary mb-0">Track your preparation progress with our proprietary AI Readiness Score algorithm.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Stats Section -->
+            <div class="py-4 border-top border-bottom border-secondary border-opacity-25 mb-5">
+              <div class="row text-center g-3">
+                <div class="col-4">
+                  <h3 class="fw-bold mb-0 text-primary">100%</h3>
+                  <p class="small text-secondary mb-0 uppercase tracking-wider">AI Driven</p>
+                </div>
+                <div class="col-4">
+                  <h3 class="fw-bold mb-0 text-primary">Real-time</h3>
+                  <p class="small text-secondary mb-0 uppercase tracking-wider">Feedback</p>
+                </div>
+                <div class="col-4">
+                  <h3 class="fw-bold mb-0 text-primary">Secure</h3>
+                  <p class="small text-secondary mb-0 uppercase tracking-wider">Data Privacy</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- FAQ Section -->
+            <div class="text-start px-lg-4">
+              <h4 class="fw-bold mb-4 text-center">Frequently Asked Questions</h4>
+              <div class="row g-4">
+                <div class="col-md-6">
+                  <h6 class="fw-bold">How does the AI evaluate me?</h6>
+                  <p class="small text-secondary">Our AI analyzes your technical accuracy, communication depth, and role alignment using advanced LLMs like Gemini and Mistral.</p>
+                </div>
+                <div class="col-md-6">
+                  <h6 class="fw-bold">Is my data secure?</h6>
+                  <p class="small text-secondary">Yes, your resumes and responses are processed securely and we never sell your personal information to third parties.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Legal Links at the bottom of the card with different background -->
+            <div class="mt-5 pt-3 border-top border-secondary border-opacity-10 text-center bg-light bg-opacity-10 rounded-bottom py-3 mx-n5 mb-n5">
+              <p class="text-secondary small mb-0" style="font-size: 0.7rem; opacity: 0.8;">
+                By continuing, you agree to ICP's 
+                <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showTerms">Terms & Conditions</a>,<br>
+                Read our <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showPrivacy">Privacy Policy</a>.
+              </p>
             </div>
           </div>
         </div>
@@ -96,6 +151,7 @@
     </div>
   </div>
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/static/js/cta.js"></script>
 </body>
 </html>
