UI_Refinement_Asterisks_and_CSS_Optimization

--- a/frontend/static/pages/forgot_password.html
+++ b/frontend/static/pages/forgot_password.html
@@ -35,7 +35,7 @@
             
             <form @submit.prevent="submit">
               <div class="mb-4">
-                <label class="form-label text-secondary small text-uppercase fw-bold">Email Address</label>
+                <label class="form-label text-secondary small text-uppercase fw-bold">Email Address <span class="text-danger">*</span></label>
                 <input name="email" type="email" class="form-control form-control-lg" required placeholder="name@example.com" maxlength="80" v-model="email">
               </div>
               <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold shadow-sm mb-3" :disabled="submitting">
