--- a/frontend/static/pages/reset_password.html
+++ b/frontend/static/pages/reset_password.html
@@ -59,7 +59,7 @@
             
             <form @submit.prevent="submit">
               <div class="mb-4">
-                <label class="form-label text-secondary small text-uppercase fw-bold">New Password</label>
+                <label class="form-label text-secondary small text-uppercase fw-bold">New Password <span class="text-danger">*</span></label>
                 <div class="input-group input-group-lg">
                   <input v-model="password" :type="showPassword ? 'text' : 'password'" class="form-control" placeholder="Create a strong password" title="New Password" required maxlength="12">
                   <button class="btn password-toggle-btn" type="button" @click="showPassword = !showPassword" title="Toggle password visibility">
@@ -107,7 +107,7 @@
               </div>
 
               <div class="mb-4">
-                <label class="form-label text-secondary small text-uppercase fw-bold">Confirm New Password</label>
+                <label class="form-label text-secondary small text-uppercase fw-bold">Confirm New Password <span class="text-danger">*</span></label>
                 <div class="input-group input-group-lg">
                   <input v-model="confirmPassword" :type="showConfirmPassword ? 'text' : 'password'" class="form-control" placeholder="Re-enter your password" title="Confirm Password" required maxlength="12">
                   <button class="btn password-toggle-btn" type="button" @click="showConfirmPassword = !showConfirmPassword" title="Toggle password visibility">
