--- a/frontend/static/pages/cta.html
+++ b/frontend/static/pages/cta.html
@@ -139,12 +139,12 @@
 
             <!-- Legal Links at the bottom of the card with different background -->
             <div class="mt-5 pt-3 border-top border-secondary border-opacity-10 text-center bg-light bg-opacity-10 rounded-bottom py-3 mx-n5 mb-n5">
-              <p class="text-secondary small mb-0" style="font-size: 0.7rem; opacity: 0.8;">
-                By continuing, you agree to ICP's 
-                <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showTerms">Terms & Conditions</a>,<br>
-                Read our <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showPrivacy">Privacy Policy</a>.
-              </p>
-            </div>
+          <p class="text-secondary small mb-0 legal-footer-text">
+            By continuing, you agree to ICP's 
+            <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showTerms">Terms & Conditions</a>,<br>
+            Read our <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showPrivacy">Privacy Policy</a>.
+          </p>
+        </div>
           </div>
         </div>
       </div>
