--- a/frontend/static/pages/dashboard.html
+++ b/frontend/static/pages/dashboard.html
@@ -160,7 +160,7 @@
       
       <form class="animate-fade-in" @submit.prevent="uploadResume()">
         <div class="mb-4">
-          <label for="jobTitle" class="form-label fw-bold small text-secondary">Target Job Title</label>
+          <label for="jobTitle" class="form-label fw-bold small text-secondary">Target Job Title <span class="text-danger">*</span></label>
           <input type="text" id="jobTitle" name="job_title" class="form-control py-2 rounded-3" placeholder="e.g. Software Engineer, Marketing Manager..." required
                  maxlength="128"
                  v-model="targetJobTitle"
