--- a/frontend/static/pages/login.html
+++ b/frontend/static/pages/login.html
@@ -66,7 +66,7 @@
 
             <!-- Legal Links at the bottom of the card with different background -->
             <div class="mt-3 pt-2 border-top border-secondary border-opacity-10 text-center bg-light bg-opacity-10 rounded-bottom py-2 mx-n4 mb-n4">
-              <p class="text-secondary small mb-0" style="font-size: 0.7rem; opacity: 0.8;">
+              <p class="text-secondary small mb-0 legal-footer-text">
                 By continuing, you agree to ICP's 
                 <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showTerms">Terms & Conditions</a>,<br>
                 Read our <a href="#" class="text-primary text-decoration-none fw-bold" @click.prevent="showPrivacy">Privacy Policy</a>.
