RAG_Stability_Fix

--- a/frontend/static/pages/register.html
+++ b/frontend/static/pages/register.html
@@ -88,7 +88,7 @@
                     </li>
                     <li class="d-flex align-items-center" :class="passwordCriteria.special ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.special ? 'bi-check-circle-fill' : 'bi-circle'"></i>
-                      Contains special character
+                      Contains special character (!, @, #, $, %, ^, *, &)
                     </li>
                   </ul>
                 </div>
