--- a/frontend/static/pages/cta.html
+++ b/frontend/static/pages/cta.html
@@ -56,8 +56,8 @@
                   <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
                 </svg>
               </div>
-              <h1 class="display-4 fw-bold mb-3">Ready to Elevate Your Career?</h1>
-              <p class="lead text-secondary mb-5">Join thousands of candidates who have improved their interview performance with our AI-powered feedback system. Your professional journey starts here.</p>
+              <h1 class="display-4 fw-bold mb-3">The Ultimate Career Launchpad for Graduates</h1>
+              <p class="lead text-secondary mb-5">Join fellow graduates who have successfully transitioned from campus to career using our AI-powered feedback system. Your professional journey starts here.</p>
             </div>
             
             <div class="row g-4 justify-content-center mb-5">
@@ -128,7 +128,7 @@
               <div class="row g-4">
                 <div class="col-md-6">
                   <h6 class="fw-bold">How does the AI evaluate me?</h6>
-                  <p class="small text-secondary">Our AI analyzes your technical accuracy, communication depth, and role alignment using advanced LLMs like Gemini and Mistral.</p>
+                  <p class="small text-secondary">Our AI analyzes your technical accuracy, communication depth, and role alignment using advanced LLMs like Mistral.</p>
                 </div>
                 <div class="col-md-6">
                   <h6 class="fw-bold">Is my data secure?</h6>
