--- a/frontend/static/pages/history.html
+++ b/frontend/static/pages/history.html
@@ -13,6 +13,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Vue 3 -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <!-- Axios -->
@@ -143,7 +145,12 @@
         </div>
 
         <!-- Filter Section -->
-        <div class="row mb-4 justify-content-end">
+        <div class="row mb-4 justify-content-between">
+          <div class="col-md-auto mb-3 mb-md-0 text-center text-md-start">
+            <button class="btn btn-primary px-4" @click="showProgressChart">
+              <i class="bi bi-graph-up-arrow me-2"></i>View Progress Analysis
+            </button>
+          </div>
           <div class="col-md-3">
             <div class="input-group glass-card overflow-hidden history-filter-group">
               <span class="input-group-text bg-transparent border-0 text-secondary ps-3">
