--- a/frontend/static/pages/register.html
+++ b/frontend/static/pages/register.html
@@ -49,7 +49,7 @@
               <div class="mb-4">
                 <label class="form-label text-secondary small text-uppercase fw-bold">Password <span class="text-danger">*</span></label>
                 <div class="input-group input-group-lg">
-                  <input v-model="form.password" :type="showPassword ? 'text' : 'password'" class="form-control" placeholder="Create a strong password" title="Password" required maxlength="12">
+                  <input v-model="form.password" :type="showPassword ? 'text' : 'password'" class="form-control" placeholder="Create your Password" title="New Password" required maxlength="12">
                   <button class="btn password-toggle-btn" type="button" @click="showPassword = !showPassword" title="Toggle password visibility">
                     <i class="bi" :class="showPassword ? 'bi-eye-slash' : 'bi-eye'"></i>
                   </button>
@@ -69,6 +69,7 @@
 
                 <!-- Password Criteria List -->
                 <div class="mt-3 p-3 rounded-3 password-criteria-list bg-light bg-opacity-10 border border-secondary border-opacity-25">
+                  <p class="text-secondary small mb-2">Password must be:</p>
                   <ul class="list-unstyled mb-0 small">
                     <li class="d-flex align-items-center mb-1" :class="passwordCriteria.length ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.length ? 'bi-check-circle-fill' : 'bi-circle'"></i>
@@ -76,19 +77,27 @@
                     </li>
                     <li class="d-flex align-items-center mb-1" :class="passwordCriteria.upper ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.upper ? 'bi-check-circle-fill' : 'bi-circle'"></i>
-                      Contains uppercase letter
+                      At least 1 uppercase letter
                     </li>
                     <li class="d-flex align-items-center mb-1" :class="passwordCriteria.lower ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.lower ? 'bi-check-circle-fill' : 'bi-circle'"></i>
-                      Contains lowercase letter
+                      At least 1 lowercase letter
                     </li>
                     <li class="d-flex align-items-center mb-1" :class="passwordCriteria.number ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.number ? 'bi-check-circle-fill' : 'bi-circle'"></i>
-                      Contains number
+                      At least 1 number
                     </li>
                     <li class="d-flex align-items-center" :class="passwordCriteria.special ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.special ? 'bi-check-circle-fill' : 'bi-circle'"></i>
-                      Contains special character
+                      <!-- Mobile: Stacked -->
+                      <div class="d-md-none d-inline-block align-middle">
+                        At least 1 special character<br>
+                        <small>(!, @, #, $, %, ^, *, &)</small>
+                      </div>
+                      <!-- Desktop: Inline -->
+                      <div class="d-none d-md-inline-block align-middle">
+                        At least 1 special character <small>(!, @, #, $, %, ^, *, &)</small>
+                      </div>
                     </li>
                   </ul>
                 </div>
