Fix_Reset_Password_HTML_Typo_And_Add_Loading_Indicator

--- a/frontend/static/pages/reset_password.html
+++ b/frontend/static/pages/reset_password.html
@@ -17,11 +17,22 @@
   
   <link rel="stylesheet" href="/static/css/styles.css">
   <style>
-    [v-cloak] { display: none !important; }
+    /* Show loading state until Vue is ready */
+    .vue-loading { display: block; }
+    [v-cloak] .vue-loading { display: block; }
+    [v-cloak] > * { display: none; }
+    /* Once Vue mounts, v-cloak is removed, so we hide loading and show content */
+    :not([v-cloak]) .vue-loading { display: none; }
   </style>
 </head>
 <body class="auth-page">
   <div id="app" v-cloak>
+    <!-- Loading Indicator (Visible only when v-cloak is present) -->
+    <div class="vue-loading position-fixed top-50 start-50 translate-middle text-center text-white">
+        <div class="spinner-border mb-3" role="status"></div>
+        <p>Loading secure page...</p>
+    </div>
+
     <nav class="navbar navbar-dark glass-nav">
       <div class="container d-flex align-items-center">
         <div class="d-flex align-items-center gap-3">
@@ -99,7 +110,7 @@
                       <i class="bi me-2" :class="passwordCriteria.number ? 'bi-check-circle-fill' : 'bi-circle'"></i>
                       At least 1 number
                     </li>
-                    <li xlitems-center" :class="passwordCriteria.special ? 'text-success' : 'text-secondary'">
+                    <li class="d-flex align-items-center mb-1" :class="passwordCriteria.special ? 'text-success' : 'text-secondary'">
                       <i class="bi me-2" :class="passwordCriteria.special ? 'bi-check-circle-fill' : 'bi-circle'"></i>
                       <!-- Mobile: Stacked -->
                       <div class="d-md-none d-inline-block align-middle">
